# Cargo.toml

[package]
name = "tcp_server"
version = "0.2.0"
edition = "2021"
resolver = "2"


[dependencies]
clap = { version = "4.4", features = ["derive"] }
env_logger = "0"
log = "0"
tokio = { version = "1", features = ["full"] }


[build-dependencies]
build-data = "0.1"


[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[profile.minsize]
inherits = "release"
strip = true
lto = "fat"
opt-level = "s"
panic = "abort"

# EOF
