# Cargo.toml

[package]
name = "tcp_server"
version = "1.0.0"
edition = "2021"
resolver = "2"


[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = { version = "0", features = ["log"] }
tracing-subscriber = "0"


[build-dependencies]
build-data = "0"


[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1


[profile.minsize]
inherits = "release"
strip = true
lto = "fat"
opt-level = "s"
panic = "abort"

# EOF
